--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,7 +1,14 @@
 <table>
+  <tr>
+    <th>ID</th>
+    <th>Title</th>
+    <th>Due Date</th>
+  </tr>
   <% for (let todo of allTodos) { %>
   <tr>
+    <td><%= todo.id %></td>
     <td><%= todo.title %></td>
+    <td><%= todo.dueDate %></td>
   </tr>
   <% } %>
 </table>
