--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,8 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <%- include('header') %> <%- include('todos') %> <%- include('footer') %>
+    <div class="grid grid-cols-6">
+      <div class="col-start-3 col-span-2">
+        <%- include('header') %>
+        <form>
+          <div class="flex gap-2 py-4">
+            <div class="flex-auto">
+              <input
+                type="text"
+                placeholder="what is next?"
+                class="border border-gray-400 p-2 rounded text-gray-900 w-full text-sm"
+                name="title"
+                required
+              />
+            </div>
+            <div class="flex-auto">
+              <input
+                type="date"
+                class="border border-gray-400 p-2 rounded text-gray-900 w-full text-sm leading-4"
+                name="dueDate"
+              />
+            </div>
+            <div class="flex-none">
+              <input
+                type="submit"
+                class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2"
+                value="Add"
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="col-start-3 col-span-2"><%- include('todos') %></div>
+      <div class="col-start-3 col-span-2"><%- include('footer') %></div>
+    </div>
   </body>
 </html>
