change input type submit to button type submit

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -30,11 +30,12 @@
               />
             </div>
             <div class="flex-none">
-              <input
+              <button
                 type="submit"
                 class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2"
-                value="Add"
-              />
+              >
+                Add
+              </button>
             </div>
           </div>
         </form>
