--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -11,7 +11,7 @@
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2">
         <%- include('header') %>
-        <form>
+        <form action="/todos" method="post">
           <div class="flex gap-2 py-4">
             <div class="flex-auto">
               <input
