--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  background-color: aquamarine;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .Todo-Item:hover .trash-icon {
   display: block;
 }
