--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -6,6 +6,22 @@
     <title>Todo App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
+    <script>
+      function toggleCompleted(id) {
+        fetch(`/todos/${id}/markAsCompleted`, {
+          method: "PUT",
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((res) => {
+            if (res.ok) {
+              window.location.reload();
+            }
+          })
+          .catch((err) => console.error(err));
+      }
+    </script>
   </head>
   <body>
     <div class="grid grid-cols-6">
