--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -14,7 +14,7 @@
       >
         <input
           id="todo-checkbox-<%= todo.id %>"
-          type="checkbox"
+          type="checkbox" <%= todo.completed ? "checked":"" %> onClick="toggleCompleted(<%= todo.id %>)"
           class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300"
         />
         <label
@@ -58,7 +58,7 @@
       >
         <input
           id="todo-checkbox-<%= todo.id %>"
-          type="checkbox"
+          type="checkbox" <%= todo.completed ? "checked":"" %> onClick="toggleCompleted(<%= todo.id %>)"
           class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300"
         />
         <label
@@ -102,7 +102,7 @@
       >
         <input
           id="todo-checkbox-<%= todo.id %>"
-          type="checkbox"
+          type="checkbox" <%= todo.completed ? "checked":"" %> onClick="toggleCompleted(<%= todo.id %>)"
           class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300"
         />
         <label
