--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -66,6 +66,7 @@
                 type="date"
                 class="border border-gray-400 p-2 rounded text-gray-900 w-full text-sm leading-4"
                 name="dueDate"
+                required
               />
             </div>
             <div class="flex-none">
@@ -82,6 +83,7 @@
       <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Overdue", data:overdueTodos}) %></div>
       <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Due Today", data:dueTodayTodos}) %></div>
       <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Due Later", data:dueLaterTodos}) %></div>
+      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Completed", data:completedTodos}) %></div>
       <div class="col-start-3 col-span-2"><%- include('footer') %></div>
     </div>
   </body>
