--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -51,6 +51,9 @@
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2">
         <%- include('header') %>
+        <p class="py-2"> Welcome to the To-Do Manager </p>
+        <p class="py-2"> New Here? <a href="/signup" class="text-green-600">Sign-up</a></p>
+        <p class="py-2"> Already have an account? <a href="/login" class="text-green-600">Login</a></p>
         <form action="/todos" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="flex gap-2 py-4">
