add user auth with passport-local

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -7,88 +7,15 @@
     <title>Todo App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
-    <script>
-      var token = document.querySelector('meta[name="csrfToken"]').getAttribute("content");
-      function toggleCompleted(id) {
-        const todoStatus = document.querySelector(`#todo-checkbox-${id}`).checked;
-        fetch(`/todos/${id}/`, {
-          method: "put",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            _csrf: token,
-            completed: todoStatus,
-          }),
-        })
-          .then((res) => {
-            if (res.ok) {
-              window.location.reload();
-            }
-          })
-          .catch((err) => console.error(err));
-      }
-      function deleteTodo(id){
-        fetch(`/todos/${id}`, {
-          method: "delete",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            _csrf: token,
-          }),
-        })
-          .then((res) => {
-            if (res.ok) {
-              window.location.reload();
-            }
-          })
-          .catch((err) => console.error(err));
-      }
-    </script>
   </head>
   <body>
     <div class="grid grid-cols-6">
-      <div class="col-start-3 col-span-2">
+      <div class="col-start-3 col-span-2 mb-2 mt-12">
         <%- include('header') %>
         <p class="py-2"> Welcome to the To-Do Manager </p>
         <p class="py-2"> New Here? <a href="/signup" class="text-green-600">Sign-up</a></p>
         <p class="py-2"> Already have an account? <a href="/login" class="text-green-600">Login</a></p>
-        <form action="/todos" method="post">
-          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-          <div class="flex gap-2 py-4">
-            <div class="flex-auto">
-              <input
-                type="text"
-                placeholder="what is next?"
-                class="border border-gray-400 p-2 rounded text-gray-900 w-full text-sm"
-                name="title"
-                required
-              />
-            </div>
-            <div class="flex-auto">
-              <input
-                type="date"
-                class="border border-gray-400 p-2 rounded text-gray-900 w-full text-sm leading-4"
-                name="dueDate"
-                required
-              />
-            </div>
-            <div class="flex-none">
-              <button
-                type="submit"
-                class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2"
-              >
-                Add
-              </button>
-            </div>
-          </div>
-        </form>
       </div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Overdue", data:overdueTodos}) %></div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Due Today", data:dueTodayTodos}) %></div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Due Later", data:dueLaterTodos}) %></div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Completed Items", data:completedTodos}) %></div>
       <div class="col-start-3 col-span-2"><%- include('footer') %></div>
     </div>
   </body>
