--- a/todo-app/views/todoHome.ejs
+++ b/todo-app/views/todoHome.ejs
@@ -51,6 +51,7 @@
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2 mb-2 mt-12">
         <%- include('header') %>
+        <a href="/signout" class="text-blue-600">Signout</a>
         <form action="/todos" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="flex gap-2 py-4">
