--- a/todo-app/views/login.ejs
+++ b/todo-app/views/login.ejs
@@ -15,9 +15,19 @@
         <div class="col-start-3 col-span-2 w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
         <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
           <%- include('header') %>
-            <h6 class="text-base font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">Sign-up as a new user</h6>
+            <h6 class="text-base font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">Login Here</h6>
             <form class="space-y-4 md:space-y-6" action="/session" method="post">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+                  <div>
+                    <% if(messages && messages.error && messages.error.length > 0)  { %>
+                        <ul class="list-none
+                        ">
+                        <% for(var i=0; i<messages.error.length; i++) { %>
+                                <li class="text-base leading-tight tracking-tight text-red-900 md:text-xs"> <%= messages.error[i] %></li>
+                        <% } %>
+                      <% } %>    
+                        </ul>
+                  </div>
                     <div>
                         <label for="emailAddress" class="block mb-2 text-sm font-medium text-gray-900">Email Address</label>
                         <input type="email" name="emailAddress" id="emailAddress" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-sky-600 focus:border-sky-600 block w-full p-2.5" placeholder="name@company.com" required=""/>
@@ -26,8 +36,10 @@
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Password</label>
                         <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-sky-600 focus:border-sky-600 block w-full p-2.5" required=""/>
                     </div>
-                    <button type="submit" class="w-full text-blue bg-sky-600 hover:bg-cyan-600 focus:ring-4 focus:outline-none focus:ring-aqua-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Create an account</button>
+                    <button type="submit" class="w-full text-blue bg-sky-600 hover:bg-cyan-600 focus:ring-4 focus:outline-none focus:ring-aqua-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Login</button>
+                    <button type="reset" class="w-full text-blue bg-sky-600 hover:bg-cyan-600 focus:ring-4 focus:outline-none focus:ring-aqua-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Reset</button>
             </form>
+            <p class="py-2"> New Here? <a href="/signup" class="text-green-600">Sign-up</a></p>
         </div>
     </div>
 </body>
