--- a/todo-app/views/todoHome.ejs
+++ b/todo-app/views/todoHome.ejs
@@ -8,9 +8,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <script>
-      var token = document.querySelector('meta[name="csrfToken"]').getAttribute("content");
+      var token = document
+        .querySelector('meta[name="csrfToken"]')
+        .getAttribute("content");
       function toggleCompleted(id) {
-        const todoStatus = document.querySelector(`#todo-checkbox-${id}`).checked;
+        const todoStatus = document.querySelector(
+          `#todo-checkbox-${id}`
+        ).checked;
         fetch(`/todos/${id}/`, {
           method: "put",
           headers: {
@@ -28,7 +32,7 @@
           })
           .catch((err) => console.error(err));
       }
-      function deleteTodo(id){
+      function deleteTodo(id) {
         fetch(`/todos/${id}`, {
           method: "delete",
           headers: {
@@ -54,6 +58,19 @@
         <a href="/signout" class="text-blue-600">Signout</a>
         <form action="/todos" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+          <div class="gap-2 py-2">
+            <% if(messages && messages.error && messages.error.length > 0) { %>
+            <ul class="list-none">
+              <% for(let i=0; i < messages.error.length; i++) { %>
+              <li
+                class="text-base leading-tight tracking-tight text-red-900 md:text-xs"
+              >
+                <%= messages.error[i] %>
+              </li>
+              <% } %>
+            </ul>
+            <% } %>
+          </div>
           <div class="flex gap-2 py-4">
             <div class="flex-auto">
               <input
@@ -83,10 +100,19 @@
           </div>
         </form>
       </div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Overdue", data:overdueTodos}) %></div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Due Today", data:dueTodayTodos}) %></div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Due Later", data:dueLaterTodos}) %></div>
-      <div class="col-start-3 col-span-2"><%- include('todos', {headingTitle:"Completed Items", data:completedTodos}) %></div>
+      <div class="col-start-3 col-span-2">
+        <%- include('todos', {headingTitle:"Overdue", data:overdueTodos}) %>
+      </div>
+      <div class="col-start-3 col-span-2">
+        <%- include('todos', {headingTitle:"Due Today", data:dueTodayTodos}) %>
+      </div>
+      <div class="col-start-3 col-span-2">
+        <%- include('todos', {headingTitle:"Due Later", data:dueLaterTodos}) %>
+      </div>
+      <div class="col-start-3 col-span-2">
+        <%- include('todos', {headingTitle:"Completed Items",
+        data:completedTodos}) %>
+      </div>
       <div class="col-start-3 col-span-2"><%- include('footer') %></div>
     </div>
   </body>
