makes 11/12 new VTA cypress test pass

--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -66,14 +66,14 @@
             </div>
             <div>
               <label
-                for="emailAddress"
+                for="email"
                 class="block mb-2 text-sm font-medium text-gray-900"
                 >Email Address</label
               >
               <input
                 type="email"
-                name="emailAddress"
-                id="emailAddress"
+                name="email"
+                id="email"
                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-sky-600 focus:border-sky-600 block w-full p-2.5"
                 placeholder="name@company.com"
                 required=""
