--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -1,7 +1,7 @@
 <div>
   <div class="flex">
     <h5><%=headingTitle %></h5>
-    <span id="count-overdue" class="ml-2 text-sm px-2 py-1 bg-gray-200"
+    <span id="<%=countName %>" class="ml-2 text-sm px-2 py-1 bg-gray-200"
       ><%=data.length %></span
     >
   </div>
