add login button in signup page

--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -101,6 +101,11 @@
               Create an account
             </button>
           </form>
+          <br />
+          <p class="py-2">
+            Already a User?
+            <a href="/login" class="text-green-600">Click Here to Login</a>
+          </p>
         </div>
       </div>
     </div>
